# strange-loops

./: .coverage  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DESIGN-DECISIONS.md  HANDOFF.md  IDEAS.md  LICENSE  LOG.md  LOOPS.md  PLAN.md  PROGRESS.json  README.md  RETROSPECTIVE.md  REVIEW.md  ROADMAP.md  STRANGE-LOOPS.md  THREADS.md  VOCABULARY.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.md  autoresearch.run.sh  autoresearch.sh  autoresearch.start.sh  dev  iterate.sh  make_chart.py  project.vertex  pyproject.toml  pyrightconfig.json  test_debug.py
apps/discord/: README.md  pyproject.toml
apps/discord/loops/: discord.vertex
apps/hlab/: CLAUDE.md  README.md  dev.loop  emitters.py  folds.py  harness.py  infra.loop  lenses.py  main.py  media.loop  minecraft.loop  proof.py  pyproject.toml  stack_lens.py  status.vertex  theme.py  tui.py
apps/hlab/commands/: status.py
apps/hlab/demos/: status.py
apps/hlab/docs/: prometheus-alerts-to-loops.md
apps/hlab/loops/: status.vertex
apps/loops/: CLAUDE.md  pyproject.toml
apps/loops/docs/: CLI.md
apps/loops/tests/: README.md  builders.py  conftest.py  helpers.py  parity.py  test_add_declarations.py  test_architecture.py  test_card_fidelity.py  test_cli.py  test_cli_dispatch.py  test_cli_fidelity.py  test_cli_operation.py  test_cli_reporter.py  test_compile_lens.py  test_completion_glue.py  test_completion_review_remediation.py  test_confluence.py  test_cross_store_ref_pins.py  test_cursor_capstone_findings.py  test_cursor_review_findings.py  test_declaration_seam.py  test_durable_handle.py  test_emit.py  test_emit_completion.py  test_emit_receipt.py  test_fact_signing_composition.py  test_fetch.py  test_fold_cursor_render.py  test_fold_diff.py  test_fold_utils.py  test_fold_view_address.py  test_fold_view_cursor.py  test_fold_view_mode.py  test_gist.py  test_gist_lens.py  test_grammar.py  test_graph.py  test_health.py  test_help_routing.py  test_helpers.py  (+54 more)
apps/reader/: pyproject.toml
apps/reader/loops/: feeds.list  feeds.vertex  reactions.vertex
apps/siftd/: CLAUDE.md  pyproject.toml
apps/siftd/tests/: test_siftd.py  test_source_claude_code.py
apps/strange-loops/: CLAUDE.md  DESIGN.md  dev  pyproject.toml
apps/strange-loops/data/: project.db  tasks.db
apps/strange-loops/docs/: CLI.md  TUI.md
apps/strange-loops/loops/: project.vertex  tasks.vertex
apps/strange-loops/scripts/: check.sh  lint.sh  test.sh
apps/telegram/: .gitignore  PROGRESS.json  pyproject.toml
experiments/: .gitignore  CELLS_USAGE.md  CLAUDE.md  HANDOFF.md  LOG.md  README.md  VIEWPORT_DESIGN.md  boundary.py  cadence_viz.py  capability.py  cascade.py  cells_vertex.py  containers.py  fidelity_lens.py  fleet.py  lens_code.py  loop_explicit.py  network_boundary.py  network_transport.py  observe.py  observer_flow.py  peer_aware_vertex.py  peer_focus.py  persistence.py  pyproject.toml  record_line_demo.py  review.py  review_lens.py  simultaneous_peers.py  store_viewer.py  summary.py
experiments/.claude/: settings.json
experiments/apps/: pipeline.py
experiments/archive/: containers.py
experiments/autoresearch/: prompt-test.vertex  read-latency.vertex
experiments/bend/: BEND_CAPABILITIES.md  README.md  boundary_reset.bend  boundary_reset.py  fold_proof.bend  fold_proof.py  multi_route.bend  multi_route.py  parallel_fold.bend  parallel_fold.py  tick_composition.bend  tick_composition.py
experiments/bend/reader/: README.md  (+3 more)
experiments/coupling-kernels/: PROGRESS.json  README.md  antipode.py  bridge.py  coupling-kernels.vertex  e5_sweep.py  perspectives.py  real_sweep.py  sweep.py  temporal.py  toy_gemini.py  toy_minilm.py  triage.py
experiments/daemon/: README.md  mill.py
experiments/discord/: discord.loop
experiments/docs/: GROUNDING.md  SPEC_DRIVEN.md  composition-research.md  genesis.md  projections.md
experiments/fidelity/: __init__.py  common.py  deploy_demo.py  help_demo.py
experiments/framework/: instrument.py  spec_render.py
experiments/homelab/: README.md  root.vertex  viz.py
experiments/monitors/: disk.loop  proc.loop  system.vertex
experiments/nested_flow/: infra.vertex  root.vertex  viz.py
experiments/network/: network_boundary.py  network_boundary_extended.py  network_observer.py
experiments/observer/: capability.py  observe.py  observer_flow.py  peer_aware_vertex.py  peer_focus.py  peer_surface.py  simultaneous_peers.py
experiments/personal_scale/: PROGRESS.json  infra.vertex  main.py  personal.vertex  root.vertex
experiments/presentation/: lens_code.py  review_lens.py
experiments/reader/: feeds.vertex
experiments/source_vertex/: viz.py
experiments/sources/: __init__.py  alert_automation.py  cascade.py  heartbeat.py  heartbeat_rate.py  multi_source.py  system_health.py  system_health_parse.py  system_health_spec.py
experiments/specs/: vm-events.projection.kdl
experiments/telegram/: README.md  telegram.loop  telegram.vertex
experiments/temporal/: boundary.py  cascade.py  fleet.py  loop_explicit.py  review.py  summary.py  tick_since.py
experiments/tests/: test_capability.py  test_pipeline.py  test_sources.py  test_ssh_session.py
experiments/transport/: __init__.py  protocol.py  vertex_client.py  vertex_server.py
experiments/verbosity/: __init__.py  common.py  deploy_demo.py  help_demo.py
libs/atoms/: CLAUDE.md  README.md  pyproject.toml
libs/cells/: .gitignore  CLAUDE.md  HANDOFF.md  LOG.md  README.md  THREADS.md  pyproject.toml
libs/custody/: CLAUDE.md  README.md  pyproject.toml
libs/engine/: CLAUDE.md  README.md  autoresearch.md  pyproject.toml
libs/facts/: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  THREADS.md  pyproject.toml
libs/lang/: CLAUDE.md  README.md  pyproject.toml
libs/peers/: .gitignore  CLAUDE.md  HANDOFF.md  README.md  THREADS.md  pyproject.toml
libs/shapes/: CLAUDE.md  HANDOFF.md  README.md  THREADS.md  pyproject.toml
libs/sources/: CLAUDE.md  HANDOFF.md  pyproject.toml
libs/store/: CLAUDE.md  README.md  pyproject.toml
libs/ticks/: CLAUDE.md  HANDOFF.md  README.md  THREADS.md  pyproject.toml
(+1910 files in other folders)
