[project]
name = "strange-loops"
version = "0.1.0"
description = "A system for focusing attention"
readme = "README.md"
license = "MIT"
authors = [{ name = "Kyle Gruel", email = "kylegruel@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "painted>=0.1.1",
    "ckdl>=1.0",
    "sqlite-ulid",
]

[project.scripts]
sloop = "loops.main:main"
sl = "loops.main:main"
loops = "loops.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = [
    "libs/atoms/src/atoms",
    "libs/engine/src/engine",
    "libs/lang/src/lang",
    "libs/store/src/store",
    "apps/loops/src/loops",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = [
    "libs/atoms/src/atoms",
    "libs/engine/src/engine",
    "libs/lang/src/lang",
    "libs/store/src/store",
    "apps/loops/src/loops",
]

[tool.uv.workspace]
members = [
    "libs/atoms",
    "libs/engine",
    "libs/painted",
    "libs/lang",
    "libs/store",
    "apps/hlab",
    "apps/loops",
    "apps/tasks",
]

[tool.uv.sources]
painted = { workspace = true }
