[project]
name = "strange-loops"
version = "0.3.1"
description = "A system for focusing attention"
readme = "README.md"
license = "MIT"
authors = [{ name = "Kyle Gruel", email = "kylegruel@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "painted>=0.1.8",
    "ckdl>=1.0",
    "pyjwt[crypto]>=2.9",
    "cryptography>=43",
    "python-ulid>=3.0",
    # python-ulid 3.1.0 imports typing_extensions unconditionally but doesn't
    # declare it. Pinning here until upstream (mdomke/python-ulid) fixes the
    # metadata. Drop when that ships.
    "typing_extensions>=4.0",
]

[project.scripts]
sloop = "loops.main:main"
sl = "loops.main:main"
loops = "loops.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = [
    "libs/atoms/src/atoms",
    "libs/engine/src/engine",
    "libs/lang/src/lang",
    "libs/sign/src/sign",
    "libs/store/src/store",
    "apps/loops/src/loops",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = [
    "libs/atoms/src/atoms",
    "libs/engine/src/engine",
    "libs/lang/src/lang",
    "libs/sign/src/sign",
    "libs/store/src/store",
    "apps/loops/src/loops",
]

[tool.uv.workspace]
members = [
    "libs/atoms",
    "libs/engine",
    "libs/lang",
    "libs/sign",
    "libs/store",
    "apps/hlab",
    "apps/loops",
    "apps/tasks",
]
