[project]
name = "experiments"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "wcwidth>=0.2",
    "kdl-py>=1.2.0",
    "pyyaml>=6.0",
    "asyncssh>=2.14",
    "cells",
    "ticks",
    "peers",
    "facts",
    "shapes",
]

[tool.uv.sources]
cells = { workspace = true }
ticks = { workspace = true }
peers = { workspace = true }
facts = { workspace = true }
shapes = { workspace = true }

[dependency-groups]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["framework", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
