[project]
name = "discord-archiver"
version = "0.1.0"
description = "Polling-based Discord message archiver via DiscordChatExporter"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
discord-poll = "discord_archiver.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_archiver"]
