[project]
name = "loops"
version = "0.1.0"
description = "CLI for .loop and .vertex files"
requires-python = ">=3.11"
dependencies = ["dsl", "atoms", "vertex", "cells"]

[tool.uv.sources]
dsl = { workspace = true }
atoms = { workspace = true }
vertex = { workspace = true }
cells = { workspace = true }

[project.scripts]
loops = "loops.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
