[project]
name = "reader"
version = "0.1.0"
description = "Personal reading intelligence"
requires-python = ">=3.11"
dependencies = ["atoms", "engine"]

[tool.uv.sources]
atoms = { workspace = true }
engine = { workspace = true }

[project.scripts]
reader = "reader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reader"]
