[project]
name = "siftd-loops"
version = "0.1.0"
description = "Conversation search and analytics — loops-native"
requires-python = ">=3.11"
dependencies = ["lang", "atoms", "engine", "painted"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.1a11"
]

[tool.uv.sources]
lang = { workspace = true }
atoms = { workspace = true }
engine = { workspace = true }
painted = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/siftd_loops"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.coverage.run]
source = ["src/siftd_loops"]
branch = true
