[project]
name = "strange-loops"
version = "0.1.0"
description = "Task orchestration built on loops"
requires-python = ">=3.11"
dependencies = ["lang", "atoms", "engine", "painted"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "ty>=0.0.1a11"
]

[tool.uv.sources]
lang = { workspace = true }
atoms = { workspace = true }
engine = { workspace = true }
painted = { path = "../../../painted" }

[project.scripts]
strange-loops = "strange_loops.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strange_loops"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.coverage.run]
source = ["src/strange_loops"]
branch = true
