[project]
name = "telegram-archiver"
version = "0.1.0"
description = "Polling-based Telegram message archiver"
requires-python = ">=3.11"
dependencies = ["telethon>=1.36"]

[project.scripts]
telegram-poll = "telegram_archiver.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_archiver"]
