[project]
name = "cells"
version = "0.1.0"
description = "A cell-buffer terminal UI framework"
requires-python = ">=3.10"
dependencies = ["wcwidth>=0.2"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cells"]
