[project]
name = "cells"
version = "0.1.0"
description = "A cell-buffer terminal UI framework"
readme = "README.md"
authors = [{ name = "Kyle Gruel", email = "kylegruel@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["wcwidth>=0.2"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cells"]

[tool.pytest.ini_options]
testpaths = ["tests"]
