[project]
name = "custody"
version = "0.1.0"
description = "Loops signing composition — domain constants, key custody layout, signer/verifier builders"
readme = "README.md"
authors = [{ name = "Kyle Gruel", email = "kylegruel@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "sign",
    "engine",
]

[tool.uv.sources]
sign = { workspace = true }
engine = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/custody"]

[tool.pytest.ini_options]
testpaths = ["tests"]
