[project]
name = "peers"
version = "0.1.0"
description = "Scoped identity primitives: Peer = name + scope"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
